--- a/apresentacao/tex/preamble.tex
+++ b/apresentacao/tex/preamble.tex
@@ -27,6 +27,15 @@
     }
     \makeatother
 
+%% Itemize bullet head
+
+% set the itemize item symbol as a triangle
+\setbeamertemplate{itemize item}{\scriptsize$\blacktriangleright$}
+% set the itemize subitem symbol as a diamond
+\setbeamertemplate{itemize subitem}{\scriptsize$\diamond$}
+% set the itemize subsubitem symbol as a circle with a dot
+\setbeamertemplate{itemize subsubitem}{\scriptsize$\odot$}
+
 \usepackage[portuguese]{babel}
 \usepackage{csquotes}
 \usepackage{graphicx}
